#53: write account junit test